# SuperSerra64

./: CMakeLists.txt  README.MD
include/: Automatico.h  ConTermometro.h  Impianto.h  Manuale.h  Serra.h  Time.h  UserInterface.h
log/: logFile.txt
src/: Automatico.cpp  ConTermometro.cpp  Impianto.cpp  Manuale.cpp  Serra.cpp  Time.cpp  UserInterface.cpp  main.cpp
